--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,14 @@
-*, ::before, ::after {
+*,
+*::before,
+*::after {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
   background: #333;
   color: #fff;
+  width: 100%;
 }
 
 .navbar {
@@ -15,6 +18,32 @@ body {
 
 .nav-link {
   text-transform: uppercase;
+}
+
+.navbar-dark .navbar-nav .nav-link:focus,
+.navbar-dark .navbar-nav .nav-link:hover {
+  color: #fff;
+}
+
+.navbar-nav a {
+  transition: .8s;
+  -webkit-transition: .8s;
+  -moz-transition: .8s;
+  -ms-transition: .8s;
+  -o-transition: .8s;
+}
+
+.navbar-nav a:hover {
+  transition: all .8s;
+  transform: translateX(5%);
+  -webkit-transform: translateX(5%);
+  -moz-transform: translateX(5%);
+  -ms-transform: translateX(5%);
+  -o-transform: translateX(5%);
+  -webkit-transition: all .8s;
+  -moz-transition: all .8s;
+  -ms-transition: all .8s;
+  -o-transition: all .8s;
 }
 
 #home {
@@ -51,6 +80,34 @@ body {
 }
 
 #explore .fa {
+  background: #333;
+  color: #fff;
+  padding: 4px;
+  font-size: 30px;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+
+#explore .explore_main img {
+  border: 0.009px solid #ddd;
+}
+
+#create .fa {
+  background: #fff;
+  color: #008ed6;
+  padding: 4px;
+  font-size: 30px;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+
+#share .fa {
   background: #333;
   color: #fff;
   padding: 4px;
